(library
  (name printer)
  (modules printer)
  (libraries unix))

(library
  (name numutils)
  (modules numutils))

(library
  (name frameutils)
  (libraries numutils settings)
  (modules frameutils))

(library
  (name settings)
  (libraries numutils)
  (modules settings))

(library
  (name commands)
  (libraries unix printer frameutils settings connections)
  (modules commands))
  
(library
  (name connections)
  (libraries unix printer frameutils settings)
  (modules connections))
  